--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
     compile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
-    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.9.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.1'
 }
